--- a/journal.html
+++ b/journal.html
@@ -16,10 +16,13 @@
 <body>
 
     <!-- header -->
-    <header class="header header-beidge">
+    <header class="header">
         <div class="header__top">
             <a href="tel:84951202219" class="header__tel ">
-                +7 (495) 120-22-19
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.78943 4.98318L6.77371 4.75H6.54H5.03H4.76237L4.78058 5.01701C4.87207 6.35884 5.13641 7.65029 5.55343 8.87083L5.68312 9.25043L5.96678 8.96678L7.16678 7.76678L7.27117 7.66238L7.23016 7.52056C6.99537 6.70857 6.84829 5.85627 6.78943 4.98318ZM16.4679 16.7794L16.3275 16.7398L16.224 16.8425L15.024 18.0325L14.7346 18.3194L15.1215 18.4474C16.3505 18.8536 17.6411 19.1179 18.983 19.2094L19.25 19.2276V18.96V17.47V17.2365L19.017 17.2206C18.1541 17.1617 17.3012 17.0147 16.4679 16.7794ZM16.3372 15.1721L16.3443 15.175L16.3516 15.1774C17.4968 15.5557 18.7333 15.76 20 15.76C20.4119 15.76 20.75 16.0981 20.75 16.51V20C20.75 20.4119 20.4119 20.75 20 20.75C10.7481 20.75 3.25 13.2519 3.25 4C3.25 3.58807 3.58807 3.25 4 3.25H7.5C7.91193 3.25 8.25 3.58807 8.25 4C8.25 5.27613 8.45409 6.50196 8.83201 7.64657C8.91457 7.91124 8.85405 8.20239 8.64322 8.41322L6.44322 10.6132L6.31486 10.7416L6.39719 10.9034C7.86137 13.7809 10.2198 16.1288 13.096 17.6025L13.258 17.6855L13.3868 17.5568L15.5844 15.3592C15.7391 15.2132 15.9271 15.14 16.12 15.14C16.2067 15.14 16.28 15.1493 16.3372 15.1721Z" fill="black" stroke="white" stroke-width="0.5" />
+                </svg>
+                <span>+7 (495) 120-22-19</span>
             </a>
             <div class="header__sale">
                 <a href="#!">ДОСТАВКА ПО МОСКВЕ И СПБ. ОТПРАВКА В РЕГИОНЫ</a>
@@ -28,7 +31,7 @@
                 <svg width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M7.83138 17.5246L8 17.6786L8.16862 17.5246C10.2032 15.6659 11.7193 13.9498 12.7284 12.3962C13.7359 10.845 14.25 9.43718 14.25 8.2C14.25 4.43519 11.4913 1.75 8 1.75C4.50869 1.75 1.75 4.43519 1.75 8.2C1.75 9.43718 2.26411 10.845 3.27159 12.3962C4.2807 13.9498 5.79683 15.6659 7.83138 17.5246ZM8 9.75C7.03807 9.75 6.25 8.96193 6.25 8C6.25 7.03807 7.03807 6.25 8 6.25C8.96193 6.25 9.75 7.03807 9.75 8C9.75 8.96193 8.96193 9.75 8 9.75ZM8 0.25C12.0697 0.25 15.75 3.36572 15.75 8.2C15.75 9.79261 15.1092 11.5564 13.7919 13.4984C12.5021 15.3998 10.5739 17.4571 8 19.6708C5.42612 17.4571 3.49792 15.3998 2.20814 13.4984C0.890842 11.5564 0.25 9.79261 0.25 8.2C0.25 3.36572 3.93029 0.25 8 0.25Z" fill="black" stroke="white" stroke-width="0.5" />
                 </svg>
-                МОСКВА
+                <span>МОСКВА</span>
             </div>
         </div>
         <div class="header__bottom">
@@ -484,20 +487,67 @@
                 </div>
             </div>
             <div class="mob__menu">
-                <div class="mob__menu-top">
-                    <button class="close mob__menu-close">
-                        <svg class="icon" xmlns="http://www.w3.org/2000/svg">
-                            <use xlink:href="#close-icon"></use>
-                        </svg>
-                    </button>
-                    <div class="header__logo">
-                        <a href="#!">
-                            <img src="images/logo.svg" alt="">
-                        </a>
+                <div class="footer__nav">
+                    <div class="footer__nav-column">
+                        <h4 class="footer__nav-title">
+                            Социальные сети
+                        </h4>
+                        <ul class="footer__nav-list">
+                            <li><a href="#!">Фейсбук</a></li>
+                            <li><a href="#!">Твиттер</a></li>
+                            <li><a href="#!">Телеграмм</a></li>
+                            <li><a href="#!">Инстаграм</a></li>
+                            <li><a href="#!">Чат</a></li>
+                        </ul>
                     </div>
-                </div>
-                <div class="mob__menu-bottom">
-
+                    <div class="footer__nav-column">
+                        <h4 class="footer__nav-title">
+                            Социальные сети
+                        </h4>
+                        <ul class="footer__nav-list">
+                            <li><a href="#!">Фейсбук</a></li>
+                            <li><a href="#!">Твиттер</a></li>
+                            <li><a href="#!">Телеграмм</a></li>
+                            <li><a href="#!">Инстаграм</a></li>
+                            <li><a href="#!">Чат</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__nav-column">
+                        <h4 class="footer__nav-title">
+                            Социальные сети
+                        </h4>
+                        <ul class="footer__nav-list">
+                            <li><a href="#!">Фейсбук</a></li>
+                            <li><a href="#!">Твиттер</a></li>
+                            <li><a href="#!">Телеграмм</a></li>
+                            <li><a href="#!">Инстаграм</a></li>
+                            <li><a href="#!">Чат</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__nav-column">
+                        <h4 class="footer__nav-title">
+                            Социальные сети
+                        </h4>
+                        <ul class="footer__nav-list">
+                            <li><a href="#!">Фейсбук</a></li>
+                            <li><a href="#!">Твиттер</a></li>
+                            <li><a href="#!">Телеграмм</a></li>
+                            <li><a href="#!">Инстаграм</a></li>
+                            <li><a href="#!">Чат</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__nav-column">
+                        <h4 class="footer__nav-title">
+                            Социальные сети
+                        </h4>
+                        <ul class="footer__nav-list">
+                            <li><a href="#!">Фейсбук</a></li>
+                            <li><a href="#!">Твиттер</a></li>
+                            <li><a href="#!">Телеграмм</a></li>
+                            <li><a href="#!">Инстаграм</a></li>
+                            <li><a href="#!">Чат</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
