--- a/product-page.html
+++ b/product-page.html
@@ -984,6 +984,12 @@
     </main>
     <!-- main -->
 
+    <!-- Modal -->
+
+    <div class="city-modal">
+        
+    </div>
+
     <!-- footer -->
     <footer class="footer">
         <div class="footer__top-wrap">
