--- a/payment.html
+++ b/payment.html
@@ -611,38 +611,51 @@
                                 </div>
                             </div>
                             <div class="delivery__content">
-                                <div class="delivery__pickup">
-                                    <img src="./images/pickup.png" alt="" class="delivery__pickup-map">
-                                    <div class="delivery__pickup-content">
-                                        <div class="delivery__pickup-title">Шоурум в Москве</div>
-                                        <div class="delivery__pickup-list">
-                                            <div class="delivery__pickup-li"><span>г. Москва -</span> Аллея Первой Маевки д. 15 стр. 6</div>
-                                            <div class="delivery__pickup-li"><span>Тел -</span> +7 (495) 120-22-19</div>
-                                            <div class="delivery__pickup-li"><span>График работы -</span> Без выходных с 10:00 до 20:00</div>
+                                <div class="delivery__block active">
+                                    <div class="delivery__pickup">
+                                        <img src="./images/pickup.png" alt="" class="delivery__pickup-map">
+                                        <div class="delivery__pickup-content">
+                                            <div class="delivery__pickup-title">Шоурум в Москве</div>
+                                            <div class="delivery__pickup-list">
+                                                <div class="delivery__pickup-li"><span>г. Москва -</span> Аллея Первой Маевки д. 15 стр. 6</div>
+                                                <div class="delivery__pickup-li"><span>Тел -</span> +7 (495) 120-22-19</div>
+                                                <div class="delivery__pickup-li"><span>График работы -</span> Без выходных с 10:00 до 20:00</div>
+                                            </div>
+                                        </div>
+                                        <div class="checkbox">
+                                            <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M3.75732 7.68967L3.86334 7.79569L3.9694 7.68972L10.9233 0.742355L11.6513 1.47027L3.86339 9.25814L0.349226 5.74398L1.08301 5.01536L3.75732 7.68967Z" fill="white" stroke="#2F2F2F" stroke-width="0.3" />
+                                            </svg>
+                                            <input type="radio">
                                         </div>
                                     </div>
-                                    <div class="checkbox">
-                                        <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M3.75732 7.68967L3.86334 7.79569L3.9694 7.68972L10.9233 0.742355L11.6513 1.47027L3.86339 9.25814L0.349226 5.74398L1.08301 5.01536L3.75732 7.68967Z" fill="white" stroke="#2F2F2F" stroke-width="0.3" />
-                                        </svg>
-                                        <input type="radio">
+                                    <div class="delivery__pickup">
+                                        <img src="./images/pickup.png" alt="" class="delivery__pickup-map">
+                                        <div class="delivery__pickup-content">
+                                            <div class="delivery__pickup-title">Шоурум в Москве</div>
+                                            <div class="delivery__pickup-list">
+                                                <div class="delivery__pickup-li"><span>г. Москва -</span> Аллея Первой Маевки д. 15 стр. 6</div>
+                                                <div class="delivery__pickup-li"><span>Тел -</span> +7 (495) 120-22-19</div>
+                                                <div class="delivery__pickup-li"><span>График работы -</span> Без выходных с 10:00 до 20:00</div>
+                                            </div>
+                                        </div>
+                                        <div class="checkbox">
+                                            <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M3.75732 7.68967L3.86334 7.79569L3.9694 7.68972L10.9233 0.742355L11.6513 1.47027L3.86339 9.25814L0.349226 5.74398L1.08301 5.01536L3.75732 7.68967Z" fill="white" stroke="#2F2F2F" stroke-width="0.3" />
+                                            </svg>
+                                            <input type="radio">
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="delivery__pickup">
-                                    <img src="./images/pickup.png" alt="" class="delivery__pickup-map">
-                                    <div class="delivery__pickup-content">
-                                        <div class="delivery__pickup-title">Шоурум в Москве</div>
-                                        <div class="delivery__pickup-list">
-                                            <div class="delivery__pickup-li"><span>г. Москва -</span> Аллея Первой Маевки д. 15 стр. 6</div>
-                                            <div class="delivery__pickup-li"><span>Тел -</span> +7 (495) 120-22-19</div>
-                                            <div class="delivery__pickup-li"><span>График работы -</span> Без выходных с 10:00 до 20:00</div>
+                                <div class="delivery__block">
+                                    <div class="delivery__block-wrapper">
+                                        <div class="delivery__block-search">
+                                            <input type="text" placeholder="Введите адрес...">
+                                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M17.9659 19.7178C16.6313 20.7484 15.0252 21.4443 13.27 21.6697V20.1478C14.6147 19.9446 15.8461 19.4117 16.8964 18.6408L17.9659 19.7178ZM10.73 3.85372C6.79348 4.483 3.78003 7.89758 3.78003 11.9998C3.78003 16.102 6.79348 19.5166 10.73 20.1459V21.6681C5.95934 21.0275 2.28003 16.9357 2.28003 11.9998C2.28003 7.06394 5.95934 2.9721 10.73 2.33151V3.85372ZM18.6612 7.13224L19.7387 6.05474C20.7689 7.38921 21.4646 8.99493 21.69 10.7498H20.1681C19.9649 9.40565 19.4322 8.17465 18.6612 7.13224ZM13.27 3.85178V2.33004C15.0176 2.55566 16.6309 3.25162 17.9659 4.28182L16.8964 5.35884C15.8461 4.58792 14.6147 4.05502 13.27 3.85178ZM20.1681 13.2498H21.69C21.4645 15.005 20.7686 16.611 19.738 17.9457L18.661 16.8761C19.4319 15.8259 19.9648 14.5945 20.1681 13.2498ZM12 7.2498C13.9697 7.2498 15.75 8.75553 15.75 11.0998C15.75 11.8627 15.444 12.7216 14.7943 13.6809C14.1719 14.5999 13.2434 15.597 12 16.6706C10.7566 15.597 9.82821 14.5999 9.20577 13.6809C8.55608 12.7216 8.25003 11.8627 8.25003 11.0998C8.25003 8.75553 10.0303 7.2498 12 7.2498ZM10.68 10.9298C10.68 11.6579 11.272 12.2498 12 12.2498C12.7281 12.2498 13.32 11.6579 13.32 10.9298C13.32 10.2017 12.7281 9.6098 12 9.6098C11.272 9.6098 10.68 10.2017 10.68 10.9298Z" fill="black" stroke="white" stroke-width="0.5" />
+                                            </svg>
                                         </div>
-                                    </div>
-                                    <div class="checkbox">
-                                        <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M3.75732 7.68967L3.86334 7.79569L3.9694 7.68972L10.9233 0.742355L11.6513 1.47027L3.86339 9.25814L0.349226 5.74398L1.08301 5.01536L3.75732 7.68967Z" fill="white" stroke="#2F2F2F" stroke-width="0.3" />
-                                        </svg>
-                                        <input type="radio">
+                                        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af03d188b05cd4c4cbd2a4e2a922a23f39cac5d4c720e21062fb1d35ed2b4ed07&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
                                     </div>
                                 </div>
                             </div>
