--- a/product-page.html
+++ b/product-page.html
@@ -646,7 +646,14 @@
                             </div>
                         </div>
                         <div class="sizes">
-                            <div class="sizes__title">Размер</div>
+                            <div class="sizes__title">Размер
+                                <button class="sizes__btn">
+                                    <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M20 10.25H20.25V10V2V1.75H20H18H17.75V2V5.75H16.25V2V1.75H16H14H13.75V2V5.75H12.25V2V1.75H12H10H9.75V2V5.75H8.25V2V1.75H8H6H5.75V2V5.75H4.25V2V1.75H4H2H1.75V2V10V10.25H2H20ZM2 0.25H20C20.9619 0.25 21.75 1.03807 21.75 2V10C21.75 10.9619 20.9619 11.75 20 11.75H2C1.03807 11.75 0.25 10.9619 0.25 10V2C0.25 1.03807 1.03807 0.25 2 0.25Z" fill="#C5C5C5" stroke="white" stroke-width="0.5" />
+                                    </svg>
+                                    Размерная сетка
+                                </button>
+                            </div>
                             <div class="colors__wrapper">
                                 <button class="sizes__item active">
                                     A - маленький
@@ -660,7 +667,8 @@
                             </div>
                         </div>
                         <div class="dop">
-                            <div class="dop__title">Дополнительные колесики</div>
+                            <div class="dop__title">Дополнительные колесики
+                            </div>
                             <div class="dop__wrapper">
                                 <div class="dop__item">
                                     <div class="dop__item-img">
@@ -690,7 +698,14 @@
                             </div>
                         </div>
                         <div class="dop">
-                            <div class="dop__title">Дополнительные колесики</div>
+                            <div class="dop__title">Подголовник
+                                <button class="dop__btn">
+                                    <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M20.25 2V1.75H20H2H1.75V2V16V16.25H2H20H20.25V16V2ZM2 0.25H20C20.9619 0.25 21.75 1.03807 21.75 2V16C21.75 16.9619 20.9619 17.75 20 17.75H2C1.03807 17.75 0.25 16.9619 0.25 16V2C0.25 1.03807 1.03807 0.25 2 0.25ZM17.25 9C17.25 7.80248 16.4926 6.73459 15.3574 5.9782C14.2186 5.21946 12.6694 4.75 11 4.75C9.33065 4.75 7.78139 5.21946 6.64263 5.9782C5.5074 6.73459 4.75 7.80248 4.75 9C4.75 10.1975 5.5074 11.2654 6.64263 12.0218C7.78139 12.7805 9.33065 13.25 11 13.25C12.6694 13.25 14.2186 12.7805 15.3574 12.0218C16.4926 11.2654 17.25 10.1975 17.25 9ZM3.25 9C3.25 7.44134 4.09235 6.00947 5.49256 4.95871C6.8928 3.90792 8.83893 3.25 11 3.25C13.1611 3.25 15.1072 3.90792 16.5074 4.95871C17.9076 6.00947 18.75 7.44134 18.75 9C18.75 10.5587 17.9076 11.9905 16.5074 13.0413C15.1072 14.0921 13.1611 14.75 11 14.75C8.83893 14.75 6.8928 14.0921 5.49256 13.0413C4.09235 11.9905 3.25 10.5587 3.25 9Z" fill="#C5C5C5" stroke="white" stroke-width="0.5" />
+                                      </svg>
+                                    Виды подголовников
+                                </button>
+                            </div>
                             <div class="dop__wrapper">
                                 <div class="dop__item">
                                     <div class="dop__item-img">
